--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello there, awesome person!
+<html>
+    <body>
+        I created an index page for my web page.  This should be pretty straight forward. 
+    </body>
+</html>
